--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -15,6 +15,6 @@
         <br />
         <br />
         <img src="/images/steps.png" width="200px" />
-        <script src="index.js"></script>
+        <script src="/js/index.js"></script>
     </body>
 </html>
